<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AppointmentActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/topBar"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="@color/purple_700"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/appointment_backoff_button"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/ic_baseline_keyboard_backspace_24"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/topBar">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="parent">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/vertical_guideline"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.5" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/appointment_date_textinput"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="Дата записи"
                app:layout_constraintEnd_toStartOf="@+id/vertical_guideline"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:startIconDrawable="@drawable/ic_baseline_date_range_24">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/white"
                    android:focusable="false" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/appointment_time_textinput"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="Время записи"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/vertical_guideline"
                app:layout_constraintTop_toTopOf="parent"
                app:startIconDrawable="@drawable/ic_baseline_access_time_24">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/white"
                    android:focusable="false" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/appointment_name_textinput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Имя"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/appointment_date_textinput"
                app:startIconDrawable="@drawable/ic_baseline_info_24">

                <com.google.android.material.textfield.TextInputEditText
                    android:inputType="text"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/white"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/appointment_phone_textinput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Телефон"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/appointment_name_textinput"
                app:startIconDrawable="@drawable/ic_baseline_phone_24">

                <com.google.android.material.textfield.TextInputEditText
                    android:inputType="phone"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/white"/>

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/appointment_duration_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Продолжительность"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/appointment_phone_textinput" />

            <RadioGroup
                android:id="@+id/appointment_duration_radioGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:checkedButton="@id/duration_radioGroup_default"
                app:layout_constraintTop_toBottomOf="@+id/appointment_duration_title">

                <RadioButton
                    android:id="@+id/duration_radioGroup_default"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/time0_30" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/time1_00" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/time1_30" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/time2_00" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/time2_30" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/time3_00" />
            </RadioGroup>

            <TextView
                android:id="@+id/appointment_services_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Виды услуг"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/appointment_duration_radioGroup" />

            <CheckBox
                android:id="@+id/haircut_checkbox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:checked="true"
                android:gravity="center"
                android:text="@string/haircut"
                app:layout_constraintEnd_toStartOf="@+id/vertical_guideline"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/appointment_services_title" />

            <CheckBox
                android:id="@+id/roots_coloring_checkbox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/roots_coloring"
                app:layout_constraintEnd_toStartOf="@+id/vertical_guideline"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/haircut_checkbox" />

            <CheckBox
                android:id="@+id/mask_checkbox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/mask"
                app:layout_constraintEnd_toStartOf="@+id/vertical_guideline"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/roots_coloring_checkbox" />

            <CheckBox
                android:id="@+id/keratin_checkbox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/keratin"
                app:layout_constraintEnd_toStartOf="@+id/vertical_guideline"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/mask_checkbox" />

            <CheckBox
                android:id="@+id/coloring_checkbox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/coloring"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/vertical_guideline"
                app:layout_constraintTop_toBottomOf="@+id/appointment_services_title" />

            <CheckBox
                android:id="@+id/tinting_checkbox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/tinting"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/vertical_guideline"
                app:layout_constraintTop_toBottomOf="@+id/coloring_checkbox" />

            <CheckBox
                android:id="@+id/illumination_checkbox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/illumination"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/vertical_guideline"
                app:layout_constraintTop_toBottomOf="@+id/tinting_checkbox" />

            <CheckBox
                android:id="@+id/ampoule_checkbox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/ampoule"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/vertical_guideline"
                app:layout_constraintTop_toBottomOf="@+id/illumination_checkbox" />

            <TextView
                android:id="@+id/appointment_hair_length_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Длина волос"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ampoule_checkbox" />

            <RadioGroup
                android:id="@+id/appointment_hair_length_radioGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:checkedButton="@+id/hair_length_radioGroup_default"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/appointment_hair_length_title">

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/short_hair" />

                <RadioButton
                    android:id="@+id/hair_length_radioGroup_default"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/medium_hair" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/long_hair" />
            </RadioGroup>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/appointment_comment_textinput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Комментарий"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/appointment_hair_length_radioGroup"
                app:startIconDrawable="@drawable/ic_baseline_comment_24">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/white"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/appointment_cost_textinput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Стоимость"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/appointment_comment_textinput"
                app:startIconDrawable="@drawable/ic_baseline_attach_money_24">

                <com.google.android.material.textfield.TextInputEditText
                    android:inputType="number"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/white"/>

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/appointment_add_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Сохранить"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/appointment_cost_textinput" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>